[gd_scene load_steps=16 format=2]

[ext_resource path="res://scripts/pausa_global.gd" type="Script" id=1]
[ext_resource path="res://assets/Ui/back_transparent.png" type="Texture" id=2]
[ext_resource path="res://assets/fontes/VT323-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/Ui/+.png" type="Texture" id=4]
[ext_resource path="res://assets/Ui/-.png" type="Texture" id=5]
[ext_resource path="res://assets/Ui/Volume.png" type="Texture" id=6]
[ext_resource path="res://assets/aúdios/botões no pause.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/Ui/botão_default.tres" type="StyleBox" id=8]
[ext_resource path="res://assets/Ui/botão_pressionado.tres" type="StyleBox" id=9]
[ext_resource path="res://assets/Ui/botão_selecionado.tres" type="StyleBox" id=10]
[ext_resource path="res://assets/Ui/botão_focus.tres" type="StyleBox" id=11]

[sub_resource type="Theme" id=1]

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.172549, 0.164706, 0.164706, 1 )

[node name="pausa_global" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.784314 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )

[node name="Volume" type="Sprite" parent="TextureRect"]
position = Vector2( 314, 209 )
scale = Vector2( 0.833333, 0.75 )
texture = ExtResource( 6 )

[node name="+" type="Sprite" parent="TextureRect"]
position = Vector2( 386, 236 )
texture = ExtResource( 4 )

[node name="-" type="Sprite" parent="TextureRect"]
position = Vector2( 241, 236 )
texture = ExtResource( 5 )

[node name="Continuar" type="Button" parent="."]
margin_left = 279.0
margin_top = 92.0
margin_right = 350.0
margin_bottom = 123.0
theme = SubResource( 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = ExtResource( 10 )
custom_styles/pressed = ExtResource( 9 )
custom_styles/focus = ExtResource( 11 )
custom_styles/normal = ExtResource( 8 )
text = "Continuar"

[node name="Reiniciar" type="Button" parent="."]
margin_left = 279.0
margin_top = 150.0
margin_right = 350.0
margin_bottom = 184.0
custom_fonts/font = SubResource( 5 )
custom_styles/hover = ExtResource( 10 )
custom_styles/pressed = ExtResource( 9 )
custom_styles/focus = ExtResource( 11 )
custom_styles/normal = SubResource( 7 )
text = "Reiniciar"

[node name="Volume" type="HSlider" parent="."]
margin_left = 264.0
margin_top = 228.0
margin_right = 366.0
margin_bottom = 244.0
max_value = 1.0
step = 0.01
value = 0.5

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="ValorVolume" type="Label" parent="."]
margin_left = 307.0
margin_top = 256.0
margin_right = 347.0
margin_bottom = 270.0
text = "50%"

[connection signal="pressed" from="Continuar" to="." method="_on_Continuar_pressed"]
[connection signal="pressed" from="Reiniciar" to="." method="_on_Reiniciar_pressed"]
[connection signal="value_changed" from="Volume" to="." method="_on_Volume_value_changed"]
